# jobber-python-client

./: .gitignore  .lychee-results.json  .lychee-results.txt  .releaserc.json  CHANGELOG.md  CLAUDE.md  OAUTH_TOKEN_GUIDE.md  README.md  VALIDATION_REPORT.md  catalog-info.yaml  delete_test_clients.py  demo_jobber_urls.py  explore_jobber_portal.py  jobber_auth.py  list_existing_clients.py  package-lock.json  package.json  pyproject.toml  test_create_client_url.py
.github/workflows/: release.yml
docs/: visual-confirmation-urls.md
docs/analysis/: jobber-api-ai-readiness-report.md
docs/architecture/decisions/: 0001-jobber-api-client-architecture.md  0002-oauth-pkce-skill-extraction.md  0003-visual-confirmation-urls.md  0005-skill-extraction-visual-urls-graphql.md  0006-production-readiness-validation.md  0007-ai-agent-enhancements.md  0008-comprehensive-validation.md  0009-remove-pypi-publishing.md  0010-automation-enhancements.md
docs/decisions/: 0004-url-helpers-unit-tests.md
docs/development/validation/: 0006-completion-summary.md
examples/: basic_usage.py  e2e_lead_to_client.py  error_handling.py  photo_upload_workflow.py  schema_introspection.py  visual_confirmation_urls.py  webhook_handler.py
jobber/: __init__.py  auth.py  client.py  exceptions.py  graphql.py  introspection.py  photos.py  url_helpers.py  webhooks.py
scripts/: migrate_doppler_secrets.py  publish-to-pypi.sh  update_version.py
skills/graphql-query-execution/: SKILL.md
skills/oauth-pkce-doppler/: SKILL.md
skills/visual-confirmation-urls/: SKILL.md
tests/: test_auth.py  test_client.py  test_exceptions.py  test_graphql.py  test_introspection.py  test_photos.py  test_url_helpers.py  test_webhooks.py
tmp/validation-investigation/: integration-test-gap-analysis.md
(+41 files in other folders)
