[project]
name = "jobber-python-client"
version = "0.3.0"
description = "Minimal Python client for Jobber GraphQL API with OAuth 2.0 support"
authors = [
    {name = "tainora", email = "usalchemist@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["jobber", "graphql", "api", "oauth2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.32.0",
    "oauthlib>=3.2.2",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/tainora/jobber-python-client"
Documentation = "https://github.com/tainora/jobber-python-client#readme"
Repository = "https://github.com/tainora/jobber-python-client"
Issues = "https://github.com/tainora/jobber-python-client/issues"
Changelog = "https://github.com/tainora/jobber-python-client/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobber"]

[tool.ruff]
line-length = 100
target-version = "0.3.0"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "0.3.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "types-requests>=2.32.4.20250913",
]
